# rust_esp32_std_amg8833

./: Cargo.toml  LICENSE  README.md  cfg_default.toml  info.txt  log.txt  log_2023_10_26_001.txt  partitions.csv  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
src/: config.rs  display_ili.rs  display_ssd.rs  errors.rs  eventloop.rs  i2c.rs  lib.rs  main.rs  mqtt.rs  sensor_agm.rs  sensor_shtc.rs  wifi.rs
