[package]
name = "rust_esp32_std_amg8833"
version = "0.1.0"
authors = ["prace@srbpavel.cz <prace@srbpavel.cz>"]
edition = "2021"
resolver = "2"

[package.metadata.espflash]
partition_table = "partitions.csv"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-svc = { version="0.45.0", features = ["experimental", "alloc"] }
esp-idf-hal = "0.40.1"
embedded-svc = "0.24"

embedded-hal = { version="0.2.7", features = ["unproven"] }
#embedded-hal = { version="1.0.0-alpha.9" }

toml-cfg = "0.1.3"

#serde = { version = "1.0.147", features = ["derive"] }
#serde_json = "1.0.89"

anyhow = "1"
log = "0.4"

grideye = "0.2.4"

ssd1306 = "0.7.1"
# these two are only needed for WrapError
display-interface = "0.4.1"
embedded-graphics = "0.7.1"

shared-bus = { version="0.2.5", features = ["std"]}

shtcx = "0.10.0"

#uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]

[build-dependencies]
embuild = "0.31"
#anyhow = "1"
