[package]
name = "rust_esp32_std_amg8833"
version = "0.1.0"
authors = ["prace@srbpavel.cz <prace@srbpavel.cz>"]
edition = "2021"
resolver = "2"

[package.metadata.espflash]
partition_table = "partitions.csv"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
#esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-sys = { version = "0.33.2", features = ["binstart"] }

#esp-idf-svc = { version="0.45.0", features = ["experimental", "alloc"] }
esp-idf-svc = { version="0.46.2", features = ["experimental", "alloc"] }

#work's ok but need to generate old doc
#esp-idf-hal = "0.40.1"
esp-idf-hal = "0.41.2"

#embedded-svc = "0.24"
embedded-svc = "0.25.3"

embedded-hal = { version="0.2.7", features = ["unproven"] }
#embedded-hal = { version="0.2.5", features = ["unproven"] }
# for embedded-hal::spi::MODE_0
#embedded-hal-alpha = { version="1.0.0-alpha.10", package = "embedded-hal" }

toml-cfg = "0.1.3"
anyhow = "1"
log = "0.4"
grideye = "0.2.4"
#Ok with embedded_graphics 0.7.1
#ssd1306 = "0.7.1"
ssd1306 = "0.8.2"
shared-bus = { version="0.2.5", features = ["std"]}
# these two are only needed for WrapError
display-interface = "0.4.1"
#ssd OK / ili Error
#embedded-graphics = "0.7.1"
embedded-graphics = "0.8.0"
#embedded-graphics-core = "0.4.0"
display-interface-spi = "0.4.1"
mipidsi = "0.7.1"
#ili9341 = "0.5.0"

[dependencies.uuid]     
version = "1.4.1"       
default-features = false
features = ["v4"]

[dev-dependencies]

[build-dependencies]
embuild = "0.31"
#anyhow = "1"
