[package]
name = "rust_esp32_std_amg8833"
version = "0.1.0"
authors = ["prace@srbpavel.cz <prace@srbpavel.cz>"]
edition = "2021"
resolver = "2"
#rust-version = "1.73"

[package.metadata.espflash]
partition_table = "partitions.csv"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]
# PAVEL 2023_11_14: new nightly
# from rustc 1.67.0-nightly (01fbc5ae7 2022-12-07)
# to rustc 1.76.0-nightly (ba7c7a301 2023-11-13)
#default = ["std", "embassy", "esp-idf-svc/native"]
#pio = ["esp-idf-svc/pio"]
#std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
#alloc = ["esp-idf-svc/alloc"]
#nightly = ["esp-idf-svc/nightly"]
#experimental = ["esp-idf-svc/experimental"]
#embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
esp-idf-sys = { version = "0.33.2", features = ["binstart"] }
#esp-idf-sys = { version = "0.33.7", features = ["binstart"] }

esp-idf-svc = { version="0.46.2", features = ["experimental", "alloc"] }
#esp-idf-svc = { version = "0.47.3", features = ["experimental", "alloc"] }

esp-idf-hal = "0.41.2"
#esp-idf-hal = "0.42.5"

embedded-svc = "0.25.3"
#embedded-svc = "0.26.4"

embedded-hal = { version="0.2.7", features = ["unproven"] }
# for embedded-hal::spi::MODE_0
#embedded-hal-alpha = { version="1.0.0-alpha.10", package = "embedded-hal" }

toml-cfg = "0.1.3"
anyhow = "1"
log = "0.4"
grideye = "0.2.4"
ssd1306 = "0.8.2"
shared-bus = { version="0.2.5", features = ["std"]}
display-interface-spi = "0.4.1"
mipidsi = "0.7.1"
ili9341 = "0.5.0"

# these two are only needed for WrapError
display-interface = "0.4.1"
embedded-graphics = "0.8.0"

[dependencies.uuid]     
version = "1.4.1"       
default-features = false
features = ["v4"]

[dev-dependencies]

[build-dependencies]
#embuild = "0.31"
embuild = "0.31.3"
